# majia-siyu-team

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.en.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: check.yml
docs/: blueprint.md  runtime-v0.4.md  skill-link-map.mmd  新手入门.md  标杆移植说明.md
docs/teardowns/: 01-wshobson-编排机制.md  02-wshobson-eval质量门.md  03-wshobson-agent解剖与多端分发.md  04-qiaomu-主持人模式与MCP.md
examples/: roster.example.json
knowledge/00-methodology/: 私域公理与消解案例库.md
knowledge/01-wechat-official/compliance/: redlines.md
knowledge/01-wechat-official/features/: 企业微信基建四件套.md
knowledge/02-industry/catering/: benchmarks.md  stages.md  餐饮私域方法论.md
knowledge/03-majia-sop/: README.md
knowledge/04-atoms/: README.md  atoms.example.jsonl
plugins/_orchestrator/.claude-plugin/: plugin.json
plugins/_orchestrator/commands/: siyu-onboard.md
plugins/compliance-critic/.claude-plugin/: plugin.json
plugins/compliance-critic/agents/: compliance-critic.md
plugins/content-product-officer/.claude-plugin/: plugin.json
plugins/ops-ad-officer/.claude-plugin/: plugin.json
plugins/siyu-execution/: README.md
src/siyu_team/: __init__.py  cli.py  context.py  host.py  perspectives.py  roster.py  routing.py  runtime.py  state.py  task.py  tracing.py
tests/: test_connectors.py  test_eval_judge.py  test_eval_static.py  test_state.py  test_task_runtime.py
tools/: atoms_extract.py  atoms_query.py  atoms_validate.py  build_skills.sh  check_consistency.py  check_versions.py  generate.py  validate_generated.py
(+55 files in other folders)
