[project]
name = "siyu-team"
version = "0.1.0"
description = "私域专家团 — orchestrator + host(主持人收口) + eval质量门 for WorkBuddy"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
siyu-eval = "siyu_team.eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/siyu_team"]
